# DigiCPU

./: .gitignore  README.md  pyproject.toml  requirements.txt
digicpu/: __init__.py  __main__.py  constants.py  core.py  window.py
digicpu/core/: assembler.py  compiler.py  cpu.py  display.py  opcode.py  ram.py
digicpu/data/: program.asm  ramdom.asm
digicpu/data/programs/: circle.asm  new_test.asm  program.asm  ramdom.asm
digicpu/lib/: checks.py  cpu.py  display.py  errors.py  log.py  ram.py  screen.py  sevenseg.py  types.py  utils.py
digicpu/unused/: screen.py
